--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "private": false,
   "version": "0.0.1",
   "description": "A Performant Customizable Tilt Component for React",
-  "main": "./dist/react-next-tilt.umd.js",
+  "main": "./dist/react-next-tilt.js",
   "module": "./dist/react-next-tilt.js",
   "exports": {
     ".": {
       "import": [
         "./dist/react-next-tilt.js",
-        "./dist/index.d.ts"
-      ],
-      "require": [
-        "./dist/react-next-tilt.umd.js",
         "./dist/index.d.ts"
       ]
     }
@@ -97,7 +93,6 @@
   },
   "files": [
     "./dist/react-next-tilt.js",
-    "./dist/react-next-tilt.umd.js",
     "./dist/index.d.ts"
   ],
   "parserOptions": {
