--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-next-tilt",
   "private": false,
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A Performant Customizable Tilt Component for React",
   "main": "./dist/react-next-tilt.umd.cjs",
   "module": "./dist/react-next-tilt.js",
@@ -65,40 +65,36 @@
     "react-dom": ">= 16.8 || ^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/manager-api": "^7.1.1",
-    "@storybook/react": "^7.1.1",
-    "@storybook/react-vite": "^7.1.1",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@storybook/theming": "^7.1.1",
-    "@types/node": "^20.5.7",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/manager-api": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-vite": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
+    "@storybook/theming": "^7.4.0",
+    "@types/node": "^20.6.0",
     "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.0.4",
-    "cypress": "^12.17.4",
-    "eslint": "^8.48.0",
+    "csstype": "^3.1.2",
+    "cypress": "^13.1.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "eslint-plugin-storybook": "^0.6.13",
     "gh-pages": "^5.0.0",
-    "path": "^0.12.7",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.1.1",
+    "storybook": "^7.4.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-dts": "^3.5.3"
   },
   "files": [
-    "./dist/react-next-tilt.js",
-    "./dist/react-next-tilt.umd.cjs",
-    "./dist/index.d.ts"
+    "dist"
   ],
   "parserOptions": {
     "sourceType": "module"
